--- a/template/src/configurations.html
+++ b/template/src/configurations.html
@@ -77,6 +77,10 @@
                 <i class="nav-icon fa fa-user-o"></i> Usuarios</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="cashRegister.html">
+                <i class="nav-icon fa fa-shopping-cart"></i> Cajas</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="reports.html">
                 <i class="nav-icon fa fa-book"></i> Reportes</a>
             </li>
