--- a/template/src/index.html
+++ b/template/src/index.html
@@ -75,6 +75,10 @@
             <li class="nav-item">
               <a class="nav-link" href="users.html">
                 <i class="nav-icon fa fa-user-o"></i> Usuarios</a>
+            </li> 
+            <li class="nav-item">
+              <a class="nav-link" href="cashRegister.html">
+                <i class="nav-icon fa fa-shopping-cart"></i> Cajas</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="reports.html">
