--- a/template/src/products-full-table.html
+++ b/template/src/products-full-table.html
@@ -83,6 +83,10 @@
                 <i class="nav-icon fa fa-user-o"></i> Usuarios</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="cashRegister.html">
+                <i class="nav-icon fa fa-shopping-cart"></i> Cajas</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="reports.html">
                 <i class="nav-icon fa fa-book"></i> Reportes</a>
             </li>
@@ -116,11 +120,16 @@
                       <div class="col-1 text-center">
                         <i class="fa icon-basket fa-2x"></i>
                       </div>
-                      <div class="col-9 pr-0">
+                      <div class="col-7 pr-0">
                         <input type="text" class="form-control form-control-sm" value="leche" placeholder="Ingresa código  de producto a buscar">
                       </div>
                       <div class="col-2">
                         <button type="button" class="btn btn-outline-primary btn-block btn-sm">Buscar</button>
+                      </div>
+                      <div class="col-2">
+                          <button class="btn btn-success btn-sm btn-block" data-toggle="modal" data-target="#edit">
+                              <i class="fa fa-plus"></i> Agregar Caja
+                            </button>
                       </div>
                     </div>
 
