--- a/template/src/products.html
+++ b/template/src/products.html
@@ -77,6 +77,10 @@
                 <i class="nav-icon fa fa-user-o"></i> Usuarios</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="cashRegister.html">
+                <i class="nav-icon fa fa-shopping-cart"></i> Cajas</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="reports.html">
                 <i class="nav-icon fa fa-book"></i> Reportes</a>
             </li>
@@ -110,13 +114,18 @@
                       <div class="col-1 text-center">
                         <i class="fa icon-basket fa-2x"></i>
                       </div>
-                      <div class="col-9 pr-0">
+                      <div class="col-7 pr-0">
                         <input type="text" class="form-control form-control-sm" placeholder="Ingresa código  de producto a buscar">
                       </div>
                       <div class="col-2">
                         <a href="products-full-table.html" style="font-style: none;">
                           <button type="button" class="btn btn-outline-primary btn-block btn-sm" >Buscar</button>
                         </a>
+                      </div>
+                      <div class="col-2">
+                          <button class="btn btn-success btn-sm btn-block" data-toggle="modal" data-target="#edit">
+                              <i class="fa fa-plus"></i> Agregar Caja
+                            </button>
                       </div>
                     </div>
 
